infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata: 
      labels: 
        app: orders
    spec: 
      containers: 
        - name: orders
          image: sajaldewangan/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
